--- a/FE/tsconfig.json
+++ b/FE/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ESNext", // typescript 최신 버전 사용
     "module": "ESNext",
     "noEmit": true,
-    "baseUrl": ".",  // 기본 경로 설정
+    "baseUrl": ".", // 기본 경로 설정
     "paths": {
       "@/*": ["src/*"],
       "@/apis/*": ["src/apis/*"],
@@ -12,15 +12,17 @@
       "@/hooks/*": ["src/hooks/*"],
       "@/pages/*": ["src/pages/*"],
       "@/stores/*": ["src/stores/*"],
-      "@/styles/*": ["src/styles/*"],
       "@/types/*": ["src/types/*"],
-      "@/utils/*": ["src/utils/*"],
-    }
+      "@/utils/*": ["src/utils/*"]
+    },
+    // @로 파일 경로 탐색하기 위해 추가한 설정
+    "moduleResolution": "bundler", 
+    "allowImportingTsExtensions":true, // . 으로 경로 탐색 허용
   },
   "files": [],
   "include": ["src"],
   "references": [
-    { "path": "./tsconfig.app.json" },
+    // tsconfig.add.json 경로 삭제
     { "path": "./tsconfig.node.json" }
   ]
 }
