--- a/FE/tsconfig.json
+++ b/FE/tsconfig.json
@@ -16,6 +16,7 @@
       "@/utils/*": ["src/utils/*"]
     },
     // @로 파일 경로 탐색하기 위해 추가한 설정
+    "jsx": "react-jsx",
     "moduleResolution": "bundler", 
     "allowImportingTsExtensions":true, // . 으로 경로 탐색 허용
   },
