Feat: JWT 적용, AccessToken 발급 및 검증 로직 추가
- JWT 적용, 소셜 로그인 후 Access Token 발급 및 검증 로직 추가
- Security Config 수정
- Swagger에 authorize 추가

S12P21D201-35

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -36,3 +36,5 @@ spring:
               - profile_nickname
               - profile_image
               - account_email
+jwt:
+  secret: ${jwt.secret}
