--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
   security:
     oauth2:
       client:
