Feat: S3 설정 및 PresignedUrl 서비스 추가
- S3 설정 추가
- 다운로드, 업로드 PresignedUrl 서비스 추가

S12P21D201-113

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -40,5 +40,14 @@ spring:
               - profile_nickname
               - profile_image
               - account_email
+  cloud:
+    aws:
+      region:
+        static: ${aws.region}
+      credentials:
+        access-key: ${aws.access-key}
+        secret-key: ${aws.secret-key}
+      s3:
+        bucket: ${aws.bucket}
 jwt:
   secret: ${jwt.secret}
