--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    // S3
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.0'
 }
 
 tasks.named('test') {
