--- a/FE/tsconfig.node.json
+++ b/FE/tsconfig.node.json
@@ -11,7 +11,9 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    "emitDeclarationOnly": true,
+    "composite": true,  
+    // "noEmit": false,
 
     /* Linting */
     "strict": true,
