--- a/BE/.gitignore
+++ b/BE/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 src/main/resources/application-private.yml
+src/main/resources/application-dev.yml
+src/main/resources/application-prod.yml
 
 ### STS ###
 .apt_generated
