--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -51,3 +51,9 @@ spring:
         bucket: ${aws.bucket}
 jwt:
   secret: ${jwt.secret}
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
+    org.springframework.web: DEBUG
