Fix : config 파일 'skipLibCheck': true 추가 및 빌드 오류 해결

--- a/FE/tsconfig.json
+++ b/FE/tsconfig.json
@@ -17,8 +17,9 @@
     },
     // @로 파일 경로 탐색하기 위해 추가한 설정
     "jsx": "react-jsx",
-    "moduleResolution": "bundler", 
-    "allowImportingTsExtensions":true, // . 으로 경로 탐색 허용
+    "moduleResolution": "bundler",
+    "skipLibCheck": true,
+    "allowImportingTsExtensions": true // . 으로 경로 탐색 허용
   },
   "files": [],
   "include": ["src"],
