Comment: 로그 주석처리
S12P21D201-175

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -52,8 +52,8 @@ spring:
 jwt:
   secret: ${jwt.secret}
 
-logging:
-  level:
-    org.springframework.security: DEBUG
-    org.springframework.security.oauth2: DEBUG
-    org.springframework.web: DEBUG
+#logging:
+#  level:
+#    org.springframework.security: DEBUG
+#    org.springframework.security.oauth2: DEBUG
+#    org.springframework.web: DEBUG
