Feat: Health Check 라이브러리 및 설정 추가
S12P21D201-166

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -53,6 +53,13 @@ jwt:
   secret: ${jwt.secret}
 baseUrl: ${url}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health # health 엔드포인트만 활성화
+        exclude: '*'
+
 #logging:
 #  level:
 #    org.springframework.security: DEBUG
