--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 
     // S3
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.0'
+
+    // Health Check (Blue-Green)
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
