Fix: Health Check 설정 수정
S12P21D201-166

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -57,8 +57,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health # health 엔드포인트만 활성화
-        exclude: '*'
+        include: health
 
 #logging:
 #  level:
