--- a/FE/package.json
+++ b/FE/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^7.3.0",
     "zustand": "^5.0.3"
   },
