--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
     // Health Check (Blue-Green)
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // fcm
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
 }
 
 tasks.named('test') {
