--- a/FE/package.json
+++ b/FE/package.json
@@ -14,9 +14,11 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.8.4",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
