--- a/FE/package.json
+++ b/FE/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --port 4173",
+    "start": "vite preview --host --port 3000"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.7",
     "react-router-dom": "^7.3.0",
+    "workbox-window": "^7.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^0.21.2"
   }
 }
