Setting: cloudfront 관련 설정 추가, 충돌 나는 기존 라이브러리 버전 변경
S12P21D201-214

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -50,6 +50,10 @@ spring:
         secret-key: ${aws.secret-key}
       s3:
         bucket: ${aws.bucket}
+      cloudfront:
+        domain: https://d257m5puxmn5e1.cloudfront.net
+        key-pair-id: ${cloudfront.key-pair-id}
+        private-key-path: ${cloudfront.private-key-path}
 jwt:
   secret: ${jwt.secret}
 baseUrl: ${url}
