--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // S3
-    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.0'
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
+    implementation 'software.amazon.awssdk:cloudfront:2.21.46'
 
     // Health Check (Blue-Green)
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
