Feat: ttf 파일 삭제 시 캐싱 무효화 처리 추가
- 수정 전: 동일한 폰트 이름으로 요청하면 이전 파일이 보임
- 수정 후: 파일 삭제 시 기존 파일에 대한 캐싱 삭제하여 다른 파일이 보이도록 수정

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -34,7 +34,6 @@ spring:
             client-id: ${oauth2.client-id}
             client-secret: ${oauth2.client-secret}
             client-authentication-method: client_secret_post
-#            redirect-uri: http://localhost:8080/login/oauth2/code/kakao # spring security에서 만든 redirect-uri
             authorization-grant-type: authorization_code
             client-name: kakao
             scope:
@@ -52,6 +51,7 @@ spring:
         bucket: ${aws.bucket}
       cloudfront:
         domain: https://dc7a8e6v5khzi.cloudfront.net
+        distribution-id: ${cloudfront.distribution-id}
         key-pair-id: ${cloudfront.key-pair-id}
         private-key-path: ${cloudfront.private-key-path}
 jwt:
